--- a/docs/en-gb/modules/crm/pages/messenger.adoc
+++ b/docs/en-gb/modules/crm/pages/messenger.adoc
@@ -34,7 +34,7 @@ include::_includes:page$rights.adoc[]
 include::_includes:page$tags-creation.adoc[]
 
 [TIP]
-If you want to create messages that should be _billed_ via the Messenger, you have to create tags for the availability *Message (billable)* in the same way. You have to add these tags to the <<#create-message, message>>.
+If you want to create messages that should be *billed* via the Messenger, you have to create tags for the availability _Message (billable)_ in the same way. You have to add these tags to the <<#create-message, message>>.
 
 [#create-message]
 == Creating a message
@@ -45,10 +45,10 @@ You can save as many messages for your contacts as you like.
 Creating a message:
 
 . Go to *CRM » Contacts*.
-. Search (icon:search[role="blue"]) the contact by means of the filter settings as described on the user manual page xref:crm:managing-contacts.adoc#[Contacts] in the xref:crm:managing-contacts.adoc#200[Searching for a contact] chapter. +
+. Search (icon:search[role="blue"]) the contact by means of the filter settings as described on the xref:crm:search-contact.adoc#[Searching for a contact] page. +
 → The contacts that correspond to the search criteria entered are displayed.
-. Open the context menu by clicking on *Action* (icon:bars[]) or with a right click in the line of the contact and select *Messenger*. +
-icon:map-signs[] *_Or:_* Click in the line of the contact and in the contact data record on the left side on *Messenger*. +
+. Open the context menu by clicking on icon:more_vert[set=material] in the line of the contact and then select icon:message[set=material] *Messenger*. +
+icon:map-signs[] *_Or:_* Click in the line of the contact to open the contact data record and then on the left side on *Messenger*. +
 → The *Messenger* area opens.
 . Click on *New message* (icon:add[set=material]).
 . Create the message. Note <<#table-new-message-messenger>>.
@@ -66,7 +66,7 @@ icon:map-signs[] *_Or:_* Click in the line of the contact and in the contact dat
 By default, *ALL* recipients as well as the own user are selected.
 
 | *Stop watch*
-|The stop watch starts counting as soon as the *Messenger* area opens. +
+|The stop watch in the top right starts to count when you open the *Messenger* area. +
 Click on icon:pause_circle[set=material] to stop the timer and on icon:play_circle[set=material] to start the timer again. Click on icon:reset[set=plenty] to reset the stop watch to 0.
 
 | *Title*
@@ -109,10 +109,10 @@ From the open contact, you can display all messages in the messenger that are sa
 Displaying messages:
 
 . Go to *CRM » Contacts*.
-. Search (icon:search[role="blue"]) the contact by means of the filter settings as described on the user manual page xref:crm:managing-contacts.adoc#[Contacts] in the xref:crm:managing-contacts.adoc#200[Searching for a contact] chapter. +
+. Search (icon:search[role="blue"]) the contact by means of the filter settings as described on the xref:crm:search-contact.adoc#[Searching for a contact] page. +
 → The contacts that correspond to the search criteria entered are displayed.
-. Open the context menu with a right click in the line of the contact and select *Messenger*. +
-icon:map-signs[] *_Or:_* Click in the line of the contact and in the contact data record on the left side on *Messenger*. +
+. Open the context menu by clicking on icon:more_vert[set=material] in the line of the contact and then select icon:message[set=material] *Messenger*. +
+icon:map-signs[] *_Or:_* Click in the line of the contact to open the contact data record and then on the left side on *Messenger*. +
 → All messages that are saved for the contact are displayed.
 
 You can display individual messages by clicking on the message itself. Use the sorting function to sort the messages by date in ascending or descending order.
@@ -126,10 +126,10 @@ You can edit messages at any time. To do so, proceed as described below.
 Editing a message:
 
 . Go to *CRM » Contacts*.
-. Search (icon:search[role="blue"]) the contact by means of the filter settings as described on the user manual page xref:crm:managing-contacts.adoc#[Contacts] in the xref:crm:managing-contacts.adoc#200[Searching for a contact] chapter. +
+. Search (icon:search[role="blue"]) the contact by means of the filter settings as described on the xref:crm:search-contact.adoc#[Searching for a contact] page. +
 → The contacts that correspond to the search criteria entered are displayed.
-. Open the context menu by clicking on *Action* (icon:bars[]) or with a right click in the line of the contact and select *Messenger*. +
-icon:map-signs[] *_Or:_* Click in the line of the contact and in the contact data record on the left side on *Messenger*. +
+. Open the context menu by clicking on icon:more_vert[set=material] in the line of the contact and then select icon:message[set=material] *Messenger*. +
+icon:map-signs[] *_Or:_* Click in the line of the contact to open the contact data record and then on the left side on *Messenger*. +
 → The *Messenger* area opens and the saved messages are displayed.
 . Click on the message that you want to edit.
 . Carry out the desired changes. Note <<#table-messenger-edit-message>>.
@@ -158,6 +158,10 @@ Click on icon:toggle_on[set=material, role=skyBlue] icon:done[set=material] to o
 | *Delete*
 |Click on icon:delete[set=material] to delete the entire message stream. +
 *_Important:_* Upon deletion, the main message and all related messages are deleted.
+
+| *Stop watch*
+|The stop watch starts counting as soon as the *Messenger* area opens. +
+Click on icon:pause_circle[set=material] to stop the timer and on icon:play_circle[set=material] to start the timer again. Click on icon:reset[set=plenty] to reset the stop watch to 0.
 
 | *Edit tags*
 |Click on *Edit tags* (icon:edit[set=material]) directly in the message to delete existing tags or add new tags. +
