--- a/docs/de-de/modules/daten/partials/catalogue-first-contact.adoc
+++ b/docs/de-de/modules/daten/partials/catalogue-first-contact.adoc
@@ -238,7 +238,7 @@ Das Katalogmenü sieht für alle Standardformate gleich aus:
 
 image::daten:menüaufbau-standardformat.png[]
 
-Dein Katalog sieht trotzdem anders aus? Dann hast du wahrscheinlich ein Marktplatz-Format geöffnet. Damit exportierst du Artikeldaten zu Marktplätzen und Preisportalen. Auch nützlich und spannend. Wie du mit Marktplatz-Formaten arbeitest, erfährst du aber xref:marktplatz-formate-exportieren.adoc#[woanders].
+Dein Katalog sieht trotzdem anders aus? Dann hast du wahrscheinlich ein Marktplatz-Format geöffnet. Damit exportierst du Artikeldaten zu Marktplätzen und Preisportalen. Auch nützlich und spannend. Aber wie du mit Marktplatz-Formaten arbeitest, erfährst du xref:marktplatz-formate-exportieren.adoc#[woanders].
 endif::file-export[]
 
 ifdef::marketplace-export[]
@@ -249,7 +249,7 @@ Das Katalogmenü sieht für alle Marktplatz-Formate gleich aus:
 
 image::maerkte:catalogue-menu-colours.png[]
 
-Dein Katalog sieht trotzdem anders aus? Dann hast du wahrscheinlich einen Katalog mit Standardformat geöffnet. Damit exportierst du Daten in eine Datei. Auch nützlich und spannend. Wie du mit Standardformaten arbeitest, erfährst du aber xref:standardformate-exportieren.adoc#[woanders].
+Dein Katalog sieht trotzdem anders aus? Dann hast du wahrscheinlich einen Katalog mit Standardformat geöffnet. Damit exportierst du Daten in eine Datei. Auch nützlich und spannend. Aber wie du mit Standardformaten arbeitest, erfährst du xref:standardformate-exportieren.adoc#[woanders].
 endif::marketplace-export[]
 
 [#menu-navigation]
