--- a/docs/en-gb/modules/crm/pages/quick-search.adoc
+++ b/docs/en-gb/modules/crm/pages/quick-search.adoc
@@ -7,11 +7,11 @@
 Use the quick search to get an overview of all information that is saved for a contact or an address data record of a guest order. Learn on this page of the manual how to <<download-all-data#, download all data of a contact or guest order>> and how to <<anonymise-data-record#, anonymise data records>> in compliance with GDPR.
 
 [NOTE]
-.Guest accounts via the plentyShop can only be found in the quick search
+.Guest orders coming into your system via plentyShop can only be found in the quick search
 ====
-In order to be able to work GDPR-compliant, no contact data record is created in case of guest orders via the plentyShop. Only the address data is saved. This data that is saved in your plentymarkets system can therefore not be found in the *CRM » Contacts* menu. The address data of the person who ordered as a guest can only be found via the address data in the quick search. +
+In order to be able to work GDPR-compliant, _no_ contact data record is created for guest orders that are coming into your system via the plentyShop. Only the address data is saved. This data that is saved in your plentymarkets system can therefore _not_ be found in the *CRM » Contacts* menu. The address data of the person who ordered as a guest in your plentyShop can only be found via the quick search. This is why you can only use the quick search to convert the data from the plentyShop guest order into a regular contact data record.
 
-Further information about converting plentyShop guest orders into regular contact data records can be found in the <<convert-guest-account#, Converting a guest account into a contact data record>> chapter.
+Further information about converting plentyShop guest orders into regular contact data records can be found in the <<convert-guest-account#, Converting a plentyShop and marketplace guest order into a contact data record>> chapter.
 ====
 
 [#user-rights]
@@ -22,7 +22,7 @@ Further information about converting plentyShop guest orders into regular contac
 
 include::_includes:page$rights.adoc[]
 
-For further information about the rights for the *CRM » Contacts* menu for back end users, refer to the xref:crm:managing-contacts.adoc#50[Contacts] page.
+For further information about the rights for the *CRM » Contacts* menu for back end users, refer to the xref:crm:preparatory-settings.adoc#assign-rights[Carrying out the preparatory settings] page.
 
 [#find-data-records]
 == Finding data records via the quick search
@@ -133,23 +133,28 @@ When you open a data record in the quick search, you see further possible settin
 |Setting |Explanation
 
 | *CONTACT ID*
-|Opens the contact data record in the *CRM » Contacts* menu.
+|Opens the contact data record in the *CRM » Contacts* menu. +
+*_Note:_* If the data record is a guest order, this field is not available.
 
 | *ORDERS*
 |Opens the *Orders » Edit orders* menu. The ID of the contact is automatically selected as filter. +
-Click on icon:add[set=material] *New order* right next to *ORDERS* to create a new order in the *Orders » Edit orders* menu.
+Click on icon:add[set=material] *New order* right next to *ORDERS* to create a new order in the *Orders » Edit orders* menu. +
+*_Note:_* If the data record is a guest order, these fields are not available.
 
 | *OFFERS*
 |Opens the menu *Orders » Edit orders*. The ID of the contact is automatically selected as filter. +
-Click on icon:add[set=material] *New offer* right next to *OFFERS* to create a new offer in the *Orders » Edit orders* menu.
+Click on icon:add[set=material] *New offer* right next to *OFFERS* to create a new offer in the *Orders » Edit orders* menu. +
+*_Note:_* If the data record is a guest order, these fields are not available.
 
 | *MESSENGER*
 |Opens the *Messenger* area further down in this view. +
-Click on icon:add[set=material] *New message* right next to *MESSENGER* to open the editing window for creating a new message further down in this view.
+Click on icon:add[set=material] *New message* right next to *MESSENGER* to open the editing window for creating a new message further down in this view. +
+*_Note:_* If the data record is a guest order, these fields are not available.
 
 | *TICKETS*
 |Opens the *CRM » Ticket system* menu. The ID of the contact is automatically selected as filter. +
-Click on icon:add[set=material] *New ticket* right next to *TICKETS* to open the editing window for creating a new ticket in the *CRM » Ticket system* menu.
+Click on icon:add[set=material] *New ticket* right next to *TICKETS* to open the editing window for creating a new ticket in the *CRM » Ticket system* menu. +
+*_Note:_* If the data record is a guest order, these fields are not available.
 
 | *Download all data of the contact*
 |Click on icon:file_download[set=material] to download all data that is saved for this data record. +
@@ -157,7 +162,8 @@ Further information can be found in the chapter <<#download-all-data, Downloadin
 
 | *Send newsletter opt-in email*
 |Click on icon:outgoing_mail[set=material] to send an email for the newsletter opt-in respectively the confirmation for the newsletter opt-in. +
-*_Note:_* If the customer is not registered for the newsletter yet, they will receive the automatic email for newsletter opt-in. If the customer is already registered for the newsletter, but has not confirmed yet, they will receive the confirmation for the newsletter opt-in.
+*_Note:_* If the customer is not registered for the newsletter yet, they will receive the automatic email for newsletter opt-in. If the customer is already registered for the newsletter, but has not confirmed yet, they will receive the confirmation for the newsletter opt-in. +
+*_Note:_* If the data record is a guest order, this field is not available.
 
 | *Anonymising a data record*
 |Click on icon:user-secret[] to anonymise the data record. Anonymising data is only possible when the data record is a "real" contact and _not_ a guest order. +
@@ -165,8 +171,8 @@ For further information, refer to the <<#anonymise-data-record, Anonymising a da
 
 | *Convert guest into contact*
 |Click on icon:swap_horiz[set=material] to convert the address data from a guest order into a regular contact data record. In the *History* area of the newly created contact data record, the entry *Converted by* as well as the name of the person who converted the data record are added. +
-Further information can be found in the <<#convert-guest-account, Converting a guest account into a contact data record>> chapter. +
-*_Note:_* If this is already a contact, the field is not available.
+Further information can be found in the <<#convert-guest-account, Converting a plentyShop and marketplace guest order into a contact data record>> chapter. +
+*_Note:_* If this is already a contact, this field is disabled.
 
 | *Reload data*
 |Click on icon:undo[] to update the data from this data record.
@@ -180,14 +186,18 @@ Further information can be found in the <<#convert-guest-account, Converting a g
 |====
 
 [#convert-guest-account]
-== Converting a guest account into a contact data record
+== Converting a plentyShop and marketplace guest order into a contact data record 
 
-Go to *CRM » Quick search* to convert the address data from a guest order into a regular contact data record.
+The *CRM » Quick search* menu allows you to convert with just one click the address data from a guest order that came into your system either via your plentyShop or via a marketplace into a regular contact data record.
 
-In case of guest orders via the plentyShop, the saved data record consists only of the address and the corresponding order. If an account name is additionally contained in the address, the account data record is also created when converting the data record.
+* In case of a guest order via the plentyShop, the saved data record only consists of the address and the corresponding order; a contact ID is _not_ saved. However, the symbol icon:done[set=material] is shown in the overview’s *Guest* column.
+
+* In case of a guest order via a marketplace, a contact ID is assigned and the symbol icon:done[set=material] is shown in the overview’s *Guest* column.
+
+If a company name is additionally contained in the address, a company data record is also created when converting the data record.
 
 [.instruction]
-Converting a guest account into a contact data record:
+Converting a plentyShop and marketplace guest order into a contact data record:
 
 . Go to *CRM » Quick search*.
 . Select at least one filter. Note <<#table-filter-quick-search>>.
@@ -201,11 +211,15 @@ Converting a guest account into a contact data record:
 → The data record is converted into a contact data record and automatically obtains the next free contact ID. In the *History* area of the contact data record, the entry *Converted by* as well as the name of the person who converted the data record are added.
 
 [TIP]
-.Callisto guest orders vs. plentyShop guest orders
+.plentyShop guest orders and marketplace guest orders 
 ====
-The xref:crm:managing-contacts.adoc#350[Converting a guest account into a regular account] chapter on the xref:crm:managing-contacts.adoc#[Contacts] page describes how to convert guest orders from your old online shop (Callisto) or from a marketplace into regular accounts. It is not possible via the contact data record to convert plentyShop guest orders into regular accounts.
+plentyShop guest orders get the symbol icon:done[set=material] in the overview’s *Guest* column, but _no_ contact ID. Marketplace guest orders get the symbol icon:done[set=material] in the overview’s *Guest* column and in addition a contact ID.
 
-Besides plentyShop guest orders, you can, however, use the quick search to convert also Callisto guest orders into regular contact data records.
+*_Notes about converting a guest order into a contact data record_*
+
+* Converting a plentyShop guest order is only possible in the *CRM » Quick search* menu.
+
+* Converting a marketplace guest order is both possible in the *CRM » Quick search* menu and in the contact data record in the *CRM » Contacts* menu. How to proceed in this case is described in the xref:crm:edit-contact.adoc#convert-guest-to-regular-account[Converting a guest order into a regular contact data record] chapter on the xref:crm:edit-contact.adoc#[Editing a contact] page.
 ====
 
 [#download-all-data]
