--- a/docs/en-gb/modules/ROOT/nav.adoc
+++ b/docs/en-gb/modules/ROOT/nav.adoc
@@ -82,6 +82,7 @@
 *** xref:stock-management:redistributing-items.adoc[Redistributing items]
 *** xref:stock-management:reshelving-items.adoc[Reshelving items]
 *** xref:stock-management:carrying-out-stocktaking.adoc[Taking stock]
+*** xref:stock-management:mobile-pick-lists.adoc[Working with pick lists]
 *** xref:stock-management:printing-labels.adoc[Printing labels]
 * xref:crm:crm.adoc[CRM]
 ** xref:crm:contacts.adoc[Contacts]
