--- a/docs/en-gb/modules/stock-management/pages/plentywarehouse.adoc
+++ b/docs/en-gb/modules/stock-management/pages/plentywarehouse.adoc
@@ -4,12 +4,12 @@
 :author: team-mobile
 
 The newly-developed plentyWarehouse app offers you numerous possibilities to deal with mobile stock management efficiently.
-Step by step, all stock management features that are already available in the <<#app, existing plentymarkets app>> will become part of the new plentyWarehouse app. Our goal in this development process is to offer more a more intuitive user experience, stable performance and a technical basis that is both reliable and up-to-date. You can profit from all of these advantages and a number of new features by downloading the plentyWarehouse app.
+Step by step, all stock management features that are already available in the xref:app:app.adoc#[existing plentymarkets app] will become part of the new plentyWarehouse app. Our goal in this development process is to offer more a more intuitive user experience, stable performance and a technical basis that is both reliable and up-to-date. You can profit from all of these advantages and a number of new features by downloading the plentyWarehouse app.
 
 [IMPORTANT]
 .Notes on the current state of the plentyWarehouse app
 ====
-At the moment, plentyWarehouse is available as part of an open beta phase. This means that we continuously publish new versions that contain changes, bug fixes and other improvements. Also, the included functions will be extended with each version. During this phase, you are welcome to ask your questions and share feedback in the link:https://forum.plentymarkets.com/c/app-pos/plentywarehouse/579[forum^] . In addition, you can always find the latest information there.
+At the moment, plentyWarehouse is available as part of an open beta phase. This means that we continuously publish new versions that contain changes, bug fixes and other improvements. Also, the included functions will be extended with each version. During this phase, you are welcome to ask your questions and share feedback in the link:https://forum.plentymarkets.com/c/app-pos/plentywarehouse/579[forum^]. In addition, you can always find the latest information there.
 ====
 
 [#100]
@@ -22,6 +22,7 @@ The following functions are currently available in plentyWarehouse. Click on the
 * xref:stock-management:redistributing-items.adoc#[Redistributing items]
 * xref:stock-management:reshelving-items.adoc#[Reshelving items]
 * xref:stock-management:carrying-out-stocktaking.adoc#[Taking stock]
+* xref:stock-management:mobile-pick-lists.adoc#[Working with pick lists]
 * xref:stock-management:printing-labels.adoc#[Printing labels for items and storage locations]
 
 [#200]
@@ -38,4 +39,4 @@ include::app:partial$hardware-plentywarehouse.adoc[]
 
 Have you downloaded the plentyWarehouse app and installed it on the appropriate hardware? Then you can proceed with setting up the app.
 
-The xref:stock-management:installation-and-initial-setup.adoc#[installation and initial setup] page of the manual offers you detailed information on your first app login, finding your way around the plentyWarehouse app and carrying out the basic settings required before productive use of the app.
+The xref:stock-management:installation-and-initial-setup.adoc#[Installation and initial setup] page of the manual offers you detailed information on your first app login, finding your way around the plentyWarehouse app and carrying out the basic settings required before productive use of the app.
