--- a/docs/de-de/modules/warenwirtschaft/pages/mobile-picklisten.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/mobile-picklisten.adoc
@@ -70,7 +70,7 @@ Bevor Picklisten mit plentyWarehouse abgearbeitet werden, muss sichergestellt se
 include::_includes:page$rechte.adoc[]
 
 [#300]
-== Pickliste bearbeiten
+== Picklisten bearbeiten
 
 Nachdem du die vorbereitenden Einstellungen für Picklisten vorgenommen und die notwendigen Rechte vergeben hast, kannst du mit dem eigentlichen Picken der Artikel beginnen.
 
@@ -118,7 +118,7 @@ Sobald alle Artikel gepickt wurden, erscheint die Meldung *Alle Artikel gepickt*
 [NOTE]
 .Shortcuts in der Artikelansicht
 ====
-Für jeden Artikel auf der Pickliste stehen weitere Shortcuts zur Verfügung. Dieese kannst du nutzen, um während der Arbeit mit der Pickliste unkompliziert weitere Aktionen durchzuführen. <<table-pick-list-shortcuts>> enthält weitere Informationen zu den verfügbaren Shortcuts.
+Für jeden Artikel auf der Pickliste stehen weitere Shortcuts zur Verfügung. Diese kannst du nutzen, um während der Arbeit mit der Pickliste unkompliziert weitere Aktionen durchzuführen. <<table-pick-list-shortcuts>> enthält weitere Informationen zu den verfügbaren Shortcuts.
 ====
 
 [[table-pick-list-shortcuts]]
@@ -127,7 +127,7 @@ Für jeden Artikel auf der Pickliste stehen weitere Shortcuts zur Verfügung. Di
 |====
 |Bedienelement |Symbol |Erläuterung
 
-|[intable-enter-quantity]*Menge eingeben*
+|[#intable-enter-quantity]*Menge eingeben*
 |icon:iso[set=material]
 | Öffnet die Ansicht zur Eingabe der Artikelmenge.
 
@@ -142,7 +142,7 @@ Für jeden Artikel auf der Pickliste stehen weitere Shortcuts zur Verfügung. Di
 |====
 
 [#330]
-=== Wagenkennung verwenden
+=== Wagenkennungen verwenden
 
 Optional kann einer Pickliste vor oder während der Bearbeitung eine Wagenkennung zugeordnet werden. Stelle dazu sicher, dass die Option xref:warenwirtschaft:mobile-picklisten.adoc#intable-trolleytag[Eingabe einer Wagenkennung ermöglichen] in den Einstellungen aktiviert ist. 
 
